     [PR #2565]
   * local socket/pipe protocol introduced a `LOGOUT` command for cleaner
     disconnection handling. [#2572]
   * codebase adapted to the liking of `clang-18` and newer revisions of
     `gcc-13`+ whose static analyzers on NUT CI farm complained about some
     imperfections after adding newer OS revisions to the population of
     build agents. [#2585, #2588]

 - updated `docs/nut-names.txt` with items defined by 42ITy NUT fork. [#2339]

 - various recipe, documentation and source files were revised to address
   respective warnings issued by the new generations of analysis tools.
   [#823, #2437, link:https://github.com/networkupstools/nut-website/issues/52[nut-website issue #52]]

 - fixed `configure` script to use default (target-specific) values of
   `CFLAGS`, `LIBS` etc. when probing relevant settings for each third-party
   dependency; as a consequence, on systems that support building for many
   targets, we check relevant build-ability for that target and not for the
   building system itself. [issue #2673, PR #2675]

 - fixed dynamic linking of Mozilla NSS on systems like Solaris/illumos,
   where the shared objects are not packaged into the common RPATH.
   [issue #2674, PR #2675]

 - added `scripts/valgrind` with a helper script and suppression file to
   ignore common third-party problems. [#2511]

 - revised `nut.exe` (the NUT for Windows wrapper for all-in-one service)
   to be more helpful with command-line use (report that it failed to start
   as a service, have a help message, pass debug verbosity to launched NUT
   programs...) and add a man page for it. [issue #2432, PR #2446]

 - the `PyNUTClient` module should no longer rely on presence of a `telnetlib`
   module in the build or execution environment (deprecated in Python 3.11,
   removed since Python 3.13). [#2183]

 - enabled installation of built single-file PDF and HTML (including man page
   renditions) under the configured `docdir`. It seems previously they were